fixed result overflow issue

--- a/packages/app/src/style.css
+++ b/packages/app/src/style.css
@@ -1,19 +1,20 @@
 body {
     background: #27272a;
     color: white;
-    min-height: 100vh;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     font-family: Helvetica, Arial, sans-serif;
+    overflow: hidden;
 }
 
 #App {
-    display: flex;
+    display: grid;
+    grid-template-columns: 50vw 50vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .FormSection {
-    flex: 0 0 50%;
-    max-width: 50%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,11 +25,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 0 0 50%;
-    height: 100vh;
+    flex: 0 0 50vw;
     color: #71717a;
-    max-width: 50%;
-    overflow-y: auto;
+    max-height: 100vh;
+    height: 100%;
 }
 
 .FormRoot {
@@ -95,15 +95,26 @@ button:hover:not(:disabled) {
 }
 
 .ResultBody {
-    max-width: 800px;
     text-wrap: wrap;
-    padding: 4rem;
     font-size: 1.25rem;
+    max-width: 100%;
+    white-space: pre-wrap; /* Allows text to wrap */
+    word-wrap: break-word; /* Breaks long words to wrap them */
+    overflow-wrap: anywhere; /* Modern equivalent for breaking long words */
+    box-sizing: border-box;
+    max-height: 100%;
+    overflow-y: auto;
+    padding: 4rem;
 }
 
+.ResultBody * {
+    max-width: 100%;
+}
+
+
 .ResultBody p {
-  margin: 0.675em 0; /* Space between paragraphs */
   line-height: 1.3; /* Line spacing */
+  white-space: wrap;
 }
 
 .ResultBody h1,
@@ -112,7 +123,7 @@ button:hover:not(:disabled) {
 .ResultBody h4,
 .ResultBody h5,
 .ResultBody h6 {
-  margin: 0.5em 0; /* Space between headings */
+  padding: 0.5em 0; /* Space between headings */
 }
 
 .ResultBody strong {
@@ -122,9 +133,6 @@ button:hover:not(:disabled) {
 .ResultBody ul {
     padding-left: 1.5em;
 }   
-.ResultBody li {
-    margin-bottom: 0.5em;
-}
 
 .ResultBody code {
     line-height: 1.3;
@@ -132,10 +140,5 @@ button:hover:not(:disabled) {
     background-color: #18181b;
     padding: 2px 6px;
     border-radius: 4px;
-}
-
-pre {
-  white-space: pre-wrap; /* Allows text to wrap */
-  word-wrap: break-word; /* Breaks long words to wrap them */
-  overflow-wrap: anywhere; /* Modern equivalent for breaking long words */
+    white-space: nowrap;
 }
